# dcomp_sample-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  absolutely_final.txt  all_targets_test.txt  appveyor.yml  clean_test_result.txt  crash_log.txt  dpi_flicker_log.txt  dpi_move_log.txt  dpi_test2.txt  dpi_test_log.txt  dpi_test_log2.txt  drag_debug.txt  drag_event_loss_debug.txt  drag_latest.txt  engine_test_error.txt  final_test_result.txt  full_engine_test.txt  full_log.txt  manual_test_log.txt  rustfmt.toml  taffy_flex_demo_drag_log.txt  taffy_flex_demo_final_log.txt  taffy_flex_demo_fixed_log.txt  test_debug.rs  test_insert.rs  test_interfaces.rs  test_local_word.pasta  test_opacity.rs  test_output.txt  test_output2.txt  test_output_debug.rn  test_rune_compile.rs  test_rune_generator.rs  test_transpile_comprehensive.rs  test_transpile_debug.rs  tmp_transpile_example.rn  (+12 more)
crates/dola/: Cargo.toml
crates/dola/src/: builder.rs  document.rs  easing.rs  error.rs  lib.rs  playback.rs  storyboard.rs  transition.rs  validate.rs  value.rs  variable.rs
crates/dola/tests/: builder_test.rs  core_types_test.rs  integration_test.rs  validation_test.rs
crates/pasta/: Cargo.toml  GRAMMAR.md
crates/pasta/benches/: performance.rs
crates/pasta/examples/: rune_module_test.rs
crates/pasta/examples/scripts/: main.rn
crates/pasta/src/: cache.rs  engine.rs  error.rs  lib.rs  loader.rs
crates/pasta/src/ir/: mod.rs
crates/pasta/src/parser/: ast.rs  mod.rs  pasta.pest
crates/pasta/src/runtime/: generator.rs  labels.rs  mod.rs  random.rs  variables.rs
crates/pasta/src/stdlib/: mod.rs
crates/pasta/src/transpiler/: label_registry.rs  mod.rs
crates/pasta/tests/: actor_assignment_test.rs  comprehensive_control_flow_test.rs  comprehensive_rune_vm_test.rs  concurrent_execution_test.rs  concurrent_execution_test.rs.broken  directory_loader_test.rs  end_to_end_simple_test.rs  engine_independence_test.rs  engine_integration_test.rs  engine_two_pass_test.rs  error_handling_tests.rs  function_scope_tests.rs  grammar_diagnostic.rs  grammar_tests.rs  label_id_consistency_test.rs  label_registry_test.rs  label_resolution_runtime_test.rs  negative_lookahead_test.rs  parser_error_tests.rs  parser_line_types.rs  parser_sakura_debug.rs  parser_tests.rs  persistence_test.rs  pest_sakura_test.rs  phase3_test.rs  rune_block_debug.rs  rune_block_integration_test.rs  rune_closure_test.rs  rune_compile_test.rs  rune_module_memory_test.rs  rune_module_merge_test.rs  sakura_debug_test.rs  sakura_script_tests.rs  simple_rune_test.rs  stdlib_integration_test.rs  test_comprehensive_control_flow.rs  test_comprehensive_control_flow_transpile.rs  test_dynamic_actors.rs  test_execution.rs  test_expected_rn_compile.rs  (+14 more)
crates/pasta/tests/common/: mod.rs
crates/pasta/tests/fixtures/: comprehensive_control_flow.pasta  comprehensive_control_flow.rn  comprehensive_control_flow.transpiled.rn  comprehensive_control_flow_simple.expected.rn  comprehensive_control_flow_simple.pasta
crates/pasta/tests/fixtures/persistence/: main.rn
crates/pasta/tests/fixtures/simple-test/: main.rn
crates/pasta/tests/fixtures/test-project/: main.rn  main.rune
crates/wintf/: Cargo.toml
crates/wintf/examples/: areka.rs  dcomp_demo.rs  generate_test_image.rs  graphics_reinit_test.rs  multi_window_test.rs  simple_window.rs  split_image.rs  taffy_flex_demo.rs  taffy_flex_demo_old.rs  typewriter_demo.rs
crates/wintf/src/: api.rs  comp.rs  dpi.rs  lib.rs  process_singleton.rs  win.rs  win_ecs.rs  win_message_handler.rs  win_state.rs  win_style.rs  win_thread_mgr.rs  win_timer.rs  winproc.rs
crates/wintf/src/com/: animation.rs  d2d.rs  d3d11.rs  dcomp.rs  dwrite.rs  mod.rs  wic.rs
crates/wintf/src/com/d2d/: command.rs  mod.rs
crates/wintf/src/ecs/: app.rs  arrangement.rs  graphics.rs  graphics_tests.rs  layout.rs  mod.rs  monitor.rs  mouse.rs  nchittest_cache.rs  transform.rs  transform_system.rs  tree.rs  tree_system.rs  window.rs  window_proc.rs  window_system.rs  world.rs
crates/wintf/src/ecs/common/: mod.rs  tree_iter.rs  tree_system.rs
crates/wintf/src/ecs/drag/: accumulator.rs  context.rs  dispatch.rs  mod.rs  state.rs  systems.rs
crates/wintf/src/ecs/graphics/: command_list.rs  components.rs  core.rs  mod.rs  systems.rs  visual_manager.rs
crates/wintf/src/ecs/layout/: arrangement.rs  high_level.rs  hit_test.rs  metrics.rs  mod.rs  rect.rs  systems.rs  taffy.rs
crates/wintf/src/ecs/pointer/: dispatch.rs  mod.rs
crates/wintf/src/ecs/transform/: mod.rs
crates/wintf/src/ecs/widget/: brushes.rs  mod.rs
crates/wintf/src/ecs/widget/bitmap_source/: alpha_mask.rs  bitmap_source.rs  mod.rs  resource.rs  systems.rs  task_pool.rs  tests.rs  wic_core.rs
crates/wintf/src/ecs/widget/shapes/: mod.rs  rectangle.rs
crates/wintf/src/ecs/widget/text/: draw_labels.rs  label.rs  mod.rs  typewriter.rs  typewriter_ir.rs  typewriter_systems.rs
crates/wintf/src/ecs/window_proc/: handlers.rs  mod.rs
crates/wintf/tests/: arrangement_bounds_test.rs  bitmap_source_integration_test.rs  box_style_consolidation_test.rs  boxstyle_coordinate_separation_test.rs  client_area_positioning_test.rs  component_state_pattern_test.rs  entity_name_format_test.rs  feedback_loop_convergence_test.rs  graphics_core_ecs_test.rs  graphics_core_test.rs  graphics_reinit_unit_test.rs  hierarchical_bounds_test.rs  insert_visual_test.rs  layout_component_conversion_test.rs  layout_graphics_sync_test.rs  lazy_reinit_pattern_test.rs  monitor_hierarchy_test.rs  parent_visual_test.rs  remove_visual_api_test.rs  resource_removal_detection_test.rs  surface_optimization_test.rs  taffy_advanced_test.rs  taffy_flex_layout_pure_test.rs  taffy_layout_integration_test.rs  transform_test.rs  vertical_text_layout_test.rs  visual_component_test.rs  visual_graphics_auto_creation_test.rs  visual_hierarchy_sync_test.rs  widget_visual_auto_insert_test.rs
doc/: MIGRATION_SUMMARY.md  REORGANIZATION_SUMMARY.md  WinVisual.md  rune-persistence-guide.md
src/: com_rc.rs  comptr.rs  consts.rs  dcomp_api.rs  dcomp_window.rs  dx_api.rs  hwnd_window.rs  main.rs  (+7 more)
(+640 files in other folders)
