[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Dot-Station Master <dot.station@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
human-panic = "2.0.3"
rand = "0.9.2"
windows-numerics = "0.3.0"

[workspace.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_Animation",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[profile.release]
# 最適化レベル。'z'はサイズを最優先で最適化します。
opt-level = 'z'
# リンク時最適化を有効にし、より積極的な最適化を行います。
lto = true
# コード生成ユニットを1にすることで、より多くの最適化が可能になりますが、コンパイル時間は長くなります。
codegen-units = 1
# パニック時にスタックを巻き戻し、バックトレースを可能にします。(変更)
panic = 'unwind'
# デバッグシンボルを実行ファイルに残し、詳細なバックトレースを可能にします。(変更)
strip = false

