[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Dot-Station Master <dot.station@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
human-panic = "2.0.3"
rand = "0.9.2"
windows-numerics = "0.3.1"
windows-core = "0.62.2"
async-task = "4.7.1"
ambassador = "0.4.2"
taffy = "0.9.1"
nonmax = "0.5.5"
bevy_tasks = "0.17.2"
bevy_utils = "0.17.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.dependencies.bevy_app]
version = "0.17.2"
features = [
    "bevy_reflect",
    "std",
]

[workspace.dependencies.bevy_ecs]
version = "0.17.2"
features = [
    "async_executor",
    "backtrace",
    "bevy_reflect",
    "std",
    "multi_threaded",
    "serialize",
]

[workspace.dependencies.async-executor]
version = "1.13.3"
features = ["static"]

[workspace.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Animation",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[profile.release]
# 最適化レベル。'z'はサイズを最優先で最適化します。
opt-level = 'z'
# リンク時最適化を有効にし、より積極的な最適化を行います。
lto = true
# コード生成ユニットを1にすることで、より多くの最適化が可能になりますが、コンパイル時間は長くなります。
codegen-units = 1
# パニック時にスタックを巻き戻し、バックトレースを可能にします。(変更)
panic = 'unwind'
# デバッグシンボルを実行ファイルに残し、詳細なバックトレースを可能にします。(変更)
strip = false

