[package]
name = "pasta"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rune = "0.14"
thiserror = "2"
pest = "2.8"
pest_derive = "2.8"
glob = "0.3"
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
