[package]
name = "pasta"
version = "0.1.0"
edition = "2021"
authors = ["Dot-Station Master <dot.station@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = true

[dependencies]
rune = "0.14"
thiserror = "2"
pest = "2.8"
pest_derive = "2.8"
glob = "0.3"
tracing = "0.1"
rand = "0.9"
futures = "0.3"

[dev-dependencies]
