[package]
name = "wintf"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
ambassador ={ workspace = true }
async-executor = { workspace = true }
async-task = { workspace = true }
windows = { workspace = true }
windows-numerics = { workspace = true }

[dev-dependencies]
human-panic = { workspace = true }
rand ={ workspace = true }
