[package]
name = "wintf"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
ambassador ={ workspace = true }
async-executor = { workspace = true }
async-task = { workspace = true }
bevy_ecs = { workspace = true }
bevy_tasks = { workspace = true }
bevy_utils = { workspace = true }
nonmax = { workspace = true }
taffy = { workspace = true }
windows = { workspace = true }
windows-core = { workspace = true }
windows-numerics = { workspace = true }

[dev-dependencies]
human-panic = { workspace = true }
rand ={ workspace = true }
